--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
+*{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .App {
+    padding-top: 0px;
+    padding-bottom: 0px;
     text-align: center;
     background-color: #282c34;
     display: flex;
@@ -7,7 +14,6 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-    height: 100vh;
 }
 
 .star {
@@ -18,6 +24,4 @@
     background-size: cover;
 }
 
-.rating {
 
-}
